testsuite/poke.pkl/cast-diag-4.pk
/* { dg-do compile } */

defun foo = string:
  {
   return 10 as string; /* { dg-error "" } */
  }
